home.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-deployment
  labels:
    app: home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      labels:
        app: home
    spec:
      containers:
      - name: home
        image: cekeh/home-container:latest
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: home-service
spec:
  type: NodePort
  selector:
    app: home
  ports:
  - port: 8080
